--- a/package.json
+++ b/package.json
@@ -6,10 +6,18 @@
     "@types/node": "^16.11.46",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "chart.js": "^3.8.2",
+    "dayjs": "^1.11.4",
+    "formik": "^2.2.9",
     "react": "^18.2.0",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.7.4"
+    "sass": "^1.54.0",
+    "typescript": "^4.7.4",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
