--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "sass": "^1.54.0",
     "typescript": "^4.7.4",
+    "use-local-storage": "^2.3.6",
     "yup": "^0.32.11"
   },
   "scripts": {
