--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
     "react-id-generator": "^3.0.2",
     "react-router-dom": "^6.3.0",
