--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
     "react-id-generator": "^3.0.2",
+    "react-loader-spinner": "^5.1.7-beta.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "sass": "^1.54.0",
