--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "notistack": "^2.0.5",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
+    "react-countup": "^6.3.1",
     "react-dom": "^18.2.0",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
