refactor: created function for repeating code fragments

--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_STORAGE="task-book-6b2e9.appspot.com"
 REACT_APP_FIREBASE_SENDER_ID="25360340146"
 REACT_APP_FIREBASE_APP_ID="1:25360340146:web:459dd4adf5c8ee76a5a5ab"
 REACT_APP_FIREBASE_MEASUREMENT_ID="G-KHWG4TSPBQ"
+REACT_APP_WEATHER_KEY="fa58a0c787258b5d7584e89bb5d49fa2"
